<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="action_calculate">Calculate</string>
    <string name="action_share">Share</string>
    <string name="action_share_chooser">Share via…</string>
    <string name="action_rate">Rate</string>
    <string name="action_apps">More apps</string>
    <string name="action_github">GitHub</string>
    <string name="action_github_issues">GitHub issues</string>
    <string name="action_github_profile">GitHub profile</string>
    <string name="height">Height</string>
    <string name="height_unit">cm</string>
    <string name="height_helper">Enter your height in Centimeter.</string>
    <string name="weight">Weight</string>
    <string name="weight_unit">kg</string>
    <string name="weight_helper">Enter your weight in Kilogram.</string>
    <string name="result_hint">Enter your height and weight to see your BMI.</string>
    <string name="result_very_severely_underweight">Very Severely Underweight</string>
    <string name="result_severely_underweight">Severely Underweight</string>
    <string name="result_underweight">Underweight</string>
    <string name="result_normal">Normal weight</string>
    <string name="result_overweight">Overweight</string>
    <string name="result_obese_1">Obese Class I</string>
    <string name="result_obese_2">Obese Class II</string>
    <string name="result_obese_3">Obese Class III</string>
    <string name="error_enter_height">Please enter your height!</string>
    <string name="error_enter_weight">Please enter your weight!</string>
    <string name="error_fill_all_fields">Please fill all fields!</string>
    <string name="error_copy_failure">Copy text to clipboard failed!</string>
    <string name="error_action_failure">Failed to complete this action!</string>
</resources>
